--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -251,7 +251,8 @@ jobs:
     name: Publish to PyPI
     runs-on: ubuntu-latest
     needs: [build-package, docker, integration-test]
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
+    # Only run on tagged releases AND if PyPI token is configured
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && secrets.PYPI_API_TOKEN != ''
     
     steps:
       - uses: actions/checkout@v4
