--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,10 @@ jobs:
       - name: Run Pyright
         run: pyright .
         continue-on-error: true
+      
+      - name: Code Quality Analysis
+        run: python scripts/check_quality.py
+        continue-on-error: true
 
   security:
     name: Security Scanning
@@ -251,8 +255,8 @@ jobs:
     name: Publish to PyPI
     runs-on: ubuntu-latest
     needs: [build-package, docker, integration-test]
-    # Only run on tagged releases AND if PyPI token is configured
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v') && secrets.PYPI_API_TOKEN != ''
+    # Only run on tagged releases (PyPI token must be configured in secrets)
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     
     steps:
       - uses: actions/checkout@v4
