refactor: Clean up project structure and remove redundant files
- Remove temporary translation and build scripts from root
- Remove duplicate Docker configuration directories (.docker-files, .tools)
- Consolidate historical documentation into docs/archive/
- Remove obsolete quantum_config_old.py
- Remove arXiv submission files (tex, compile scripts)
- Remove redundant deployment scripts
- Remove duplicate READMEs in subdirectories
- Clean up pytest and benchmark caches
- Update .gitignore with comprehensive patterns
- Move project reports to archive (DEPLOYMENT_SUCCESS, ORGANIZATION_REPORT, PROJECT_STRUCTURE)

Total files cleaned: 46 redundant files removed
Result: Leaner, more maintainable project structure

--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,30 @@ videos/*.mkv
 !.docker-files/README.md
 !.gitignore
 !.gitattributes
+
+# Temporary files
+*.tmp
+*.bak
+*~
+
+# Build artifacts
+build/
+dist/
+*.egg-info/
+
+# Cache directories
+.pytest_cache/
+.benchmarks/
+__pycache__/
+*.pyc
+
+# IDE
+.vscode/
+.idea/
+
+# Logs
+*.log
+
+# Environment
+.env
+.venv/
